--- a/package.json
+++ b/package.json
@@ -1,59 +1,64 @@
 {
-    "name": "livepool",
-    "version": "0.7.9",
-    "description": "debugging proxy for web developers base on NodeJS",
-    "keywords": [
-        "proxy",
-        "debug",
-        "web",
-        "develop",
-        "reload",
-        "fiddler"
-    ],
-    "maintainers": [{
-        "name": "rehornchen@tencent.com",
-        "web": "https://github.com/rehorn"
-    }],
-    "homepage": "https://github.com/rehorn/livepool",
-    "dependencies": {
-        "colors": "^0.6.2",
-        "mime": "^1.2.11",
-        "rimraf": "^2.2.8",
-        "graceful-fs": "^3.0.2",
-        "underscore": "^1.6.0",
-        "iconv-lite": "^0.4.3",
-        "request": "^2.37.0",
-        "http-proxy": "^1.1.5",
-        "http-proxy-agent": "^0.2.6",
-        "express": "^3.4.0",
-        "socket.io": "^1.0.6"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/rehorn/livepool.git"
-    },
-    "engines": {
-        "node": ">= 0.8.x"
-    },
-    "bugs": {
-        "url": "https://github.com/rehorn/livepool/issues"
-    },
-    "bin": {
-        "livepool": "./bin/livepool.js"
-    },
-    "preferGlobal": true,
-    "main": "node-webkit.html",
-    "webkit": {
-        "plugin": true
-    },
-    "window": {
-        "title": "livepool ui",
-        "toolbar": false,
-        "frame": true,
-        "width": 960,
-        "height": 600,
-        "min_width": 400,
-        "min_height": 200
-    },
-    "node-main": "./node-webkit.js"
+  "name": "livepool",
+  "version": "0.7.9",
+  "description": "debugging proxy for web developers base on NodeJS",
+  "keywords": [
+    "proxy",
+    "debug",
+    "web",
+    "develop",
+    "reload",
+    "fiddler"
+  ],
+  "maintainers": [
+    {
+      "name": "rehornchen@tencent.com",
+      "web": "https://github.com/rehorn"
+    }
+  ],
+  "homepage": "https://github.com/rehorn/livepool",
+  "dependencies": {
+    "colors": "^0.6.2",
+    "mime": "^1.2.11",
+    "rimraf": "^2.2.8",
+    "graceful-fs": "^3.0.2",
+    "underscore": "^1.6.0",
+    "iconv-lite": "^0.4.3",
+    "request": "^2.37.0",
+    "http-proxy": "^1.1.5",
+    "http-proxy-agent": "^0.2.6",
+    "express": "^3.4.0",
+    "socket.io": "^1.0.6"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rehorn/livepool.git"
+  },
+  "engines": {
+    "node": ">= 0.8.x"
+  },
+  "bugs": {
+    "url": "https://github.com/rehorn/livepool/issues"
+  },
+  "bin": {
+    "livepool": "./bin/livepool.js"
+  },
+  "preferGlobal": true,
+  "main": "node-webkit.html",
+  "webkit": {
+    "plugin": true
+  },
+  "window": {
+    "title": "livepool ui",
+    "toolbar": false,
+    "frame": true,
+    "width": 960,
+    "height": 600,
+    "min_width": 400,
+    "min_height": 200
+  },
+  "node-main": "./node-webkit.js",
+  "devDependencies": {
+    "protobuf": "^0.11.0"
+  }
 }
