--- a/package.json
+++ b/package.json
@@ -59,6 +59,9 @@
   },
   "node-main": "./node-webkit.js",
   "devDependencies": {
+    "glob": "^6.0.1",
+    "multiparty": "^4.1.2",
+    "node-protobuf": "^1.2.11",
     "protobuf": "^0.11.0"
   }
 }
