--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
   "devDependencies": {
     "glob": "^6.0.1",
     "multiparty": "^4.1.2",
-    "node-protobuf": "^1.2.11",
-    "protobuf": "^0.11.0"
+    "protobufjs": "^4.1.3"
   }
 }
